2002-03-20  Maciej Stachowiak  <mjs@apple.com>

	Merged the following changes from LABYRINTH_KDE_3_MERGE branch:
	
	2002-03-20  Maciej Stachowiak  <mjs@apple.com>

		Merged accumlated changes from HEAD, up to
		MERGED_TO_KDE_3_MERGE_BRANCH tag.

	2002-03-19  Maciej Stachowiak  <mjs@apple.com>
	
	        * WebView.subproj/IFWebView.mm: (-[IFWebView layout]):
		layout() no longer takes an argument.
	
2002-03-21  Richard Williamson  <rjw@apple.com>

        Added setNeedsToApplyStyles: and reapplyStyles.  This is for dynamic preferences
        refresh support.
        
	* WebView.subproj/IFWebView.h:
	* WebView.subproj/IFWebView.mm: (-[IFWebView reapplyStyles]), (-[IFWebView
	layout]), (-[IFWebView setNeedsToApplyStyles:]), (-[IFWebView drawRect:]):
	* WebView.subproj/IFWebViewPrivate.h:

2002-03-21  John Sullivan  <sullivan@apple.com>

	Cleaned up defaults registration and use. The class
	IFPreferences now registers the defaults at load time, early
	enough that Alexander doesn't have to register them separately
	as it had been. Also, all the defaults currently in use now
	have accessor cover methods, which Alexander will use
	exclusively.
	
	* WebView.subproj/IFPreferences.mm:
	New file, registers defaults and implements cover methods.

	* WebView.subproj/IFPreferences.h:
	This file existed but wasn't being used (contents #ifdeffed out).
	Now it declares the cover methods, but still has an #ifdeffed
	section for possible future stuff.

	* WebKit.pbproj/project.pbxproj: Updated for new file.

	* WebView.subproj/IFWebDataSource.mm:
	(+[IFWebDataSource initialize]): removed defaults-registration
	from here.

2002-03-20  John Sullivan  <sullivan@apple.com>

	Added displayTitle field to IFURIEntry. This is intended to hold the string
	used in menu items, window titles, etc. Alexander uses this to cache the
	center-truncated title for pages with very long titles.

	* History.subproj/IFURIEntry.h: