@@ -133,7 +133,15 @@
         if (((IFWebViewPrivate *)_viewPrivate)->needsToApplyStyles){
             WEBKITDEBUGLEVEL (WEBKIT_LOG_VIEW, "doing layout\n");
             //double start = CFAbsoluteTimeGetCurrent();
-            widget->part()->xmlDocImpl()->applyChanges(TRUE, TRUE);
+
+
+// FIXME: This is commented out because it fails to  compile with KDE3 merge.
+// We need to replace it with whatever the new equivalent is.
+
+//            widget->part()->xmlDocImpl()->applyChanges(TRUE, TRUE);
+
+
+
             //WebKitDebugAtLevel (WEBKIT_LOG_TIMING, "apply style time %e\n", CFAbsoluteTimeGetCurrent() - start);
             ((IFWebViewPrivate *)_viewPrivate)->needsToApplyStyles = NO;
         }
